# creator-pad

./: .gdbinit  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  toolchain-arm-none-eabi.cmake
doc/: Hardware.md  ManufacturerFirmware.md
openocd/: NUCxxx-cmsis-dap.cfg  NUCxxx.cfg
src/: main.c  version.c
src/application/: main.c
src/application/core/: CMakeLists.txt
src/application/core/inc/: cyclic_tasks.h  events.h  led_toggle.h  lwshell_opts.h  pads.h  programs.h  rbuff.h  scheduler.h  shell.h  trace.h  ttime.h
src/application/core/src/: cyclic_tasks.c  led_toggle.c  pads.c  programs.c  rbuff.c  scheduler.c  shell.c  trace.c  ttime.c
src/application/drivers/inc/: analog_inputs.h  bootloader_run.h  cdc_serial.h  critical_section.h  keys.h  leds.h  powerdown.h  systick.h  usb.h  usb_out.h
src/application/drivers/src/: analog_inputs.c  bootloader_run.c  cdc_serial.c  critical_section.c  descriptors.c  keys.c  leds.c  powerdown.c  systick.c  usb.c  usb_out.c
src/application/tests/: CMakeLists.txt  README.md
src/application/tests/fakes/: fake_bootloader_run.c  fake_systick.c
src/application/tests/header_overrides/: critical_section.h
src/application/tests/src/: RunAllTests.cpp  sim.c  test_rbuff.cpp  test_scheduler.cpp  test_trace.cpp
src/application/tests/stubs/: stub_analog_inputs.c  stub_cdc_serial.c  stub_keys.c  stub_leds.c  stub_systick.c
src/configuration/configA/: README.md
src/configuration/configA/inc/: io_map.h  system.h
src/configuration/configA/src/: system.c
src/loader/: descriptors.c  dfu_transfer.c  fmc_user.c  main.c  startup_NUC123_user.S  usbd_user.c
tools/bootloader_info/: README.md  bootloader_info  bootloader_info.py
tools/trace_plot/: README.md  requirements.txt  trace_plot.py  usb_read.py
udev/: 50-remote-pad-dfu.rules
